# ViVQA-mobile

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  build.sh
app/src/main/: AndroidManifest.xml
app/src/main/assets/: outputFastBPE.txt
app/src/main/cpp/: fastBPE.hpp  native-lib.cpp
app/src/main/java/com/github/RDRsegmenter/: DataPreprocessor.java  FWObject.java  Node.java  RDRsegmenter.java  Tokenizer.java  Utils.java  Vocabulary.java  WordTag.java
app/src/main/java/com/github/dreamolight/jnpy/: DataTypes.java  Npy.java  NpyHeader.java
app/src/main/java/org/pytorch/helloworld/: MainActivity.java  NativeInterface.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  camera_overlay.xml  dialog_layout.xml  layout_loading.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: paths.xml
distribution/libs/arm64-v8a/opencv/sdk/native/jni/: OpenCV.mk
distribution/libs/arm64-v8a/opencv/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
distribution/libs/arm64-v8a/opencv/sdk/native/jni/include/opencv2/: cvconfig.h  opencv_modules.hpp
distribution/libs/arm64-v8a/sdk/native/jni/: OpenCV-arm64-v8a.mk  OpenCV.mk
distribution/libs/arm64-v8a/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
distribution/libs/arm64-v8a/sdk/native/jni/include/opencv2/: cvconfig.h  opencv_modules.hpp
gradle/wrapper/: gradle-wrapper.properties
